<resources>
    <string name="app_name" translatable="false">MeRaw</string>
    <string name="facebook_app_id" translatable="false">603412763168189</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_about">About MeRaw</string>
    <string name="personal_info_settings">Personal Information</string>
    <string name="news_settings">News Settings</string>
    <string name="stock_settings">Stock Settings</string>
    <string name="calendar_settings">Agenda Settings</string>
    <string name="traffic_settings">Traffic Settings</string>
    <string name="remind_settings">Alert Settings</string>
    <string name="system_settings">System Settings</string>
    <string name="login_out">Login Out</string>
    <string name="to_score">To Score</string>
    <string name="the_official_website">The Official Website</string>
    <string name="about_us">About Us</string>
    <string name="confirm">Confirm</string>
    <string name="select_net">Select the network…</string>
    <string name="not_binding">No binding</string>
    <string name="next_step">Next step</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_change_psd">Change Password</string>
    <string name="title_activity_language_set">Language Set</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about_app">About App</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_add_key">Add the keyword</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_set_mirror">Mirror identify</string>
    <string name="title_activity_wifi_list">Search Wifi</string>
    <string name="title_activity_bind_wifi">Binding WIFI</string>
    <string name="wifi_name">WIFI Name</string>
    <string name="wifi_pwd">WIFI Password</string>
    <string name="input_your_key">Please enter your keyword</string>
    <string name="please_set_your_pwd">Please set your password</string>
    <string name="confirm_password_again">Confirm password again</string>
    <string name="title_activity_pairing_wifi">Pairing</string>
    <string name="pairing">Pairing</string>
    <string name="start_pairing">Start pairing</string>
    <string name="how_pairing">How to pair</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="enter_mirror_mark">Please enter a mirror mark</string>
    <string name="send">Send</string>
    <string name="others_login">Third-party login</string>
    <string name="register">Register</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="enter_phone_email">Please enter your phone number/email</string>
    <string name="enter_pwd">Please enter the password</string>
    <string name="login">Login</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="registered_members">Registered members</string>
    <string name="register_now">Register now</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="phone_number">Mobile Phone</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google+</string>
    <string name="wifi" translatable="false">WI-FI</string>
    <string name="change_pwd">Change Password</string>
    <string name="email">Email</string>
    <string name="binding">Binding</string>
    <string name="unbind">Unbind</string>
    <string name="title_my_mobile_phone">My mobile phone</string>
    <string name="enter_your_bind_mobile">Please enter your binding mobile phone number</string>
    <string name="enter_verification_code">Input validation code</string>
    <string name="enter_binding_mobile_email">Please input is binding mobile phone number/email</string>
    <string name="save">Save</string>
    <string name="set_email">Set email</string>
    <string name="enter_your_bind_email">Please enter your binding email</string>
    <string name="modify_nickname">Modify the nickname</string>
    <string name="submit">Submit</string>
    <string name="title_activity_edit_gender">Gender</string>
    <string name="title_activity_edit_header">Replace the picture</string>
    <string name="change_header">Replace the picture</string>
    <string name="title_activity_stock_search">Search</string>
    <string name="search">Search</string>
    <string name="hint_stock_search">Please enter the name of the company or stock symbo</string>
    <string name="title_activity_stock">Stock Info</string>
    <string name="equity_market">Equity Market</string>
    <string name="title_activity_stock_edit">Equity Market</string>
    <string name="title_activity_stock_add_key">StockAddKeyActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_remind">Reminders</string>
    <string name="title_activity_add_remind">Add new event</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="confirm_to_add">Confirm to add</string>
    <string name="title_activity_all_remind">AllRemindActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_add_city">AddCityActivity</string>
    <string name="pickerview_select_city">Select City</string>
    <string name="pickerview_cancel">concel</string>
    <string name="pickerview_submit">confirm</string>
    <string name="title_activity_traffic">TrafficActivity</string>
    <string name="title_activity_add_navigation">AddNavigationActivity</string>
    <string name="title_activity_navigation_list">NavigationListActivity</string>
</resources>
