<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.app.module.setting.SettingActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@color/white"
                android:orientation="vertical"
                app:divider="@drawable/divider_16dp_gray"
                app:showDividers="beginning|middle">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="?android:listDivider"
                    app:showDividers="beginning|middle|end">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/news_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/news_settings"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/stock_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/stock_settings"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/traffic_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/traffic_settings"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/calendar_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/calendar_settings"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/remind_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/remind_settings"/>

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/me_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/news_settings"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:onClick="languageSet"
                    android:padding="16dp"
                    android:text="@string/title_activity_language_set"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:onClick="about"
                        android:text="@string/app_about"/>

                    <android.support.v7.widget.AppCompatButton
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:onClick="logOut"
                        android:text="@string/login_out"/>
                </LinearLayout>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>

