<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.base.GalleryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            app:navigationIcon="@null"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.app.base.GalleryActivity"
        tools:showIn="@layout/activity_gallery">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/white"
            android:onClick="photo"
            android:text="@string/cancel"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cancel_button"
            android:background="@color/white"
            android:onClick="photo"
            android:text="@string/from_gallery"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/from_gallery"
            android:background="?android:listDivider"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/from_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/line"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@color/white"
            android:onClick="photo"
            android:text="@string/from_camera"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
