<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.module.me.EditGenderActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RadioGroup
            android:id="@+id/gender_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="?android:listDivider"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/male_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/radiobutton_selector"
                android:padding="16dp"
                android:text="@string/male"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="?android:listDivider"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/female_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:button="@null"
                android:drawableRight="@drawable/radiobutton_selector"
                android:padding="16dp"
                android:text="@string/female"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="?android:listDivider"/>
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            style="@style/NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_rg"
            android:layout_margin="@dimen/normal_margin"
            android:onClick="submit"
            android:text="@string/submit"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
